--- a/Inheritance/index.html
+++ b/Inheritance/index.html
@@ -14,6 +14,7 @@
 
     <!-- My script(s) -->
     <script src="js/Shape.js"></script>
+    <script src="js/Square.js"></script>
     <script src="js/script.js"></script>
   </head>
 
