--- a/Inheritance/index.html
+++ b/Inheritance/index.html
@@ -15,6 +15,8 @@
     <!-- My script(s) -->
     <script src="js/Shape.js"></script>
     <script src="js/Square.js"></script>
+    <script src="js/Circle.js"></script>
+    <script src="js/Line.js"></script>
     <script src="js/script.js"></script>
   </head>
 
