--- a/projet2/index.html
+++ b/projet2/index.html
@@ -15,6 +15,11 @@
     <!-- My script(s) -->
     <script src="js/Cell.js"></script>
     <script src="js/Prey.js"></script>
+    <script src="js/Scene.js"></script>
+    <script src="js/TitleState.js"></script>
+    <script src="js/InstructionsState.js"></script>
+    <script src="js/PlayState.js"></script>
+    <script src="js/GameOverState.js"></script>
     <script src="js/script.js"></script>
   </head>
 
