--- a/VJcat/index.html
+++ b/VJcat/index.html
@@ -13,6 +13,11 @@
     <script src="js/libraries/p5.dom.min.js"></script>
 
     <!-- My script(s) -->
+    <script src="js/Scene.js"></script>
+    <script src="js/TitleState.js"></script>
+    <script src="js/InstructionsState.js"></script>
+    <script src="js/PlayState.js"></script>
+    <script src="js/GameOverState.js"></script>
     <script src="js/script.js"></script>
   </head>
 
