--- a/VJcat/index.html
+++ b/VJcat/index.html
@@ -15,7 +15,7 @@
     <!-- My script(s) -->
     <script src="js/Scene.js"></script>
     <script src="js/TitleState.js"></script>
-    <script src="js/InstructionsState.js"></script>
+    <script src="js/InstructionState.js"></script>
     <script src="js/PlayState.js"></script>
     <script src="js/GameOverState.js"></script>
     <script src="js/script.js"></script>
