--- a/VJcat/index.html
+++ b/VJcat/index.html
@@ -18,6 +18,7 @@
     <script src="js/InstructionState.js"></script>
     <script src="js/PlayState.js"></script>
     <script src="js/GameOverState.js"></script>
+    <script src="js/Keyboard.js"></script>
     <script src="js/script.js"></script>
   </head>
 
