--- a/VJcat/index.html
+++ b/VJcat/index.html
@@ -20,6 +20,9 @@
     <script src="js/GameOverState.js"></script>
     <script src="js/Cat.js"></script>
     <script src="js/Keyboard.js"></script>
+    <script src="js/Shape.js"></script>
+    <script src="js/Circle.js"></script>
+    <script src="js/Square.js"></script>
     <script src="js/script.js"></script>
   </head>
 
