P3:Added Matrix visual template  but doesn't update

--- a/VJcat/index.html
+++ b/VJcat/index.html
@@ -19,7 +19,8 @@
     <script src="js/PlayState.js"></script>
     <script src="js/GameOverState.js"></script>
     <script src="js/Cat.js"></script>
-    <script src="js/Keyboard.js"></script>
+    <script src="js/Keyboard.js"></script>  
+    <script src="js/Matrix.js"></script>
     <script src="js/Shape.js"></script>
     <script src="js/Circle.js"></script>
     <script src="js/Square.js"></script>
