--- a/Inheritance/index.html
+++ b/Inheritance/index.html
@@ -17,6 +17,7 @@
     <script src="js/Square.js"></script>
     <script src="js/Circle.js"></script>
     <script src="js/Line.js"></script>
+    <script src="js/Branch.js"></script>
     <script src="js/script.js"></script>
   </head>
 
